--- a/index.html
+++ b/index.html
@@ -74,6 +74,48 @@
           <img src="images/image-product-3.jpg" alt="" />
           <img src="images/image-product-4.jpg" alt="" />
         </div>
+        <div class="thumbnail-container">
+          <input
+            class="input-radio"
+            id="item-1"
+            type="radio"
+            name="thumbnails"
+            data-index="0"
+          />
+          <label class="thumbnail thumbnail-1" for="item-1"
+            ><img src="images/image-product-1-thumbnail.jpg" alt=""
+          /></label>
+          <input
+            class="input-radio"
+            id="item-2"
+            type="radio"
+            name="thumbnails"
+            data-index="1"
+          />
+          <label class="thumbnail thumbnail-2" for="item-2"
+            ><img src="images/image-product-2-thumbnail.jpg" alt=""
+          /></label>
+          <input
+            class="input-radio"
+            id="item-3"
+            type="radio"
+            name="thumbnails"
+            data-index="2"
+          />
+          <label class="thumbnail thumbnail-3" for="item-3"
+            ><img src="images/image-product-3-thumbnail.jpg" alt=""
+          /></label>
+          <input
+            class="input-radio"
+            id="item-4"
+            type="radio"
+            name="thumbnails"
+            data-index="3"
+          />
+          <label class="thumbnail thumbnail-4" for="item-4"
+            ><img src="images/image-product-4-thumbnail.jpg" alt=""
+          /></label>
+        </div>
       </div>
 
       <div class="product__details flex">
